# disc-golf-scorecard

./: .gitignore  CLAUDE.md  GOOGLE_SETUP.md  README.md  start.sh
backend/: main.py  pyproject.toml  scorecard_parser.py  scoring_rules.py  sheets_client.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ImageUploader.jsx  PreRoundInputs.jsx  PreRoundInputs_old.jsx  RoundResults.jsx  ScorecardTable.jsx  Standings.jsx  SubmitPanel.jsx
